--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
   <head>
@@ -11,11 +10,10 @@
     <meta property="og:title" content="Remus Enerji - Dijital Enerji Tedarikçiniz" />
     <meta property="og:description" content="Remus Enerji ile yapay zeka, blockchain ve %100 yenilenebilir enerji kaynaklarıyla desteklenen dijital enerji tedarikçinize hoş geldiniz." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@remus_energy" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="src/assets/favicon.ico" type="image/svg+xml">
   </head>
 
   <body>
