meta data updated

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remus Enerji - Dijital Enerji Tedarikçiniz</title>
-    <meta name="description" content="Remus Enerji ile yapay zeka, blockchain ve %100 yenilenebilir enerji kaynaklarıyla desteklenen dijital enerji tedarikçinize hoş geldiniz." />
+    <meta name="description" content="Remus Enerji ile yapay zeka ve yenilenebilir enerji kaynaklarıyla desteklenen dijital enerji tedarikçinize hoş geldiniz." />
     <meta name="author" content="Remus Enerji" />
 
     <meta property="og:title" content="Remus Enerji - Dijital Enerji Tedarikçiniz" />
-    <meta property="og:description" content="Remus Enerji ile yapay zeka, blockchain ve %100 yenilenebilir enerji kaynaklarıyla desteklenen dijital enerji tedarikçinize hoş geldiniz." />
+    <meta property="og:description" content="Remus Enerji ile yapay zeka ve yenilenebilir enerji kaynaklarıyla desteklenen dijital enerji tedarikçinize hoş geldiniz." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
