--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@remus_energy" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="src/assets/favicon.ico" type="image/svg+xml">
   </head>
 
